# tgmock

./: README.md  README.ru.md  pyproject.toml
.codex-plugin/: plugin.json
scripts/: register_codex_plugin.py
skills/setup/: SKILL.md
skills/test/: SKILL.md
tests/: helpers.py  test_mcp_server.py  test_register_codex_plugin.py  test_runtime.py  test_tgmock.py
tgmock/: __init__.py  _autopatch.py  _commands.py  _config.py  _discovery.py  cli.py  client.py  mcp_server.py  plugin.py  runtime.py  server.py
