[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgmock"
version = "0.2.0"
description = "Telegram bot testing for Codex — fake Bot API server, pytest plugin, and MCP tools"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.entry-points."pytest11"]
tgmock = "tgmock.plugin"

[project.scripts]
tgmock = "tgmock.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tgmock"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.tgmock]
# Override these in your project's pyproject.toml
# bot_command = ["python", "main.py"]
# port = 8999
# token = "test:token"
# settle_ms = 400
# ready_log = "bot starting"
# startup_timeout = 15
# default_timeout = 25
# build_command = ["python", "-m", "compileall", "."]
# [tool.tgmock.env]
# DATABASE_URL = "postgres://..."
